<?xml version="1.0" encoding="utf-8" ?>
<package format="3">
  <name>actuate_gripper</name>
  <version>0.0.0</version>
  <description>
    Behavior to actuate a gripper connected to Fanuc CRX hardware using ROS
    topics from the GPIO controller.
  </description>

  <maintainer email="support@picknik.ai">MoveIt Pro User</maintainer>
  <author email="support@picknik.ai">MoveIt Pro User</author>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>moveit_studio_common</build_depend>

  <depend>moveit_studio_behavior_interface</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <buildtool_depend>python3-colcon-common-extensions</buildtool_depend>
</package>
